# V2

./: CMakeLists.txt  Makefile  README.md  studentai.txt
include/: strategies.h  student.h  timer.h
src/: main.cpp
